--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -1,23 +1,33 @@
 ---
-title: "Getting Started with Minimal Design"
-date: "2024-03-15"
+title: "Boredom is a privilege"
+date: "2025-03-15"
 description: "Minimalism in design isn't about removing everything—it's about removing everything that doesn't serve a purpose."
 ---
 
-Minimalism in design isn't about removing everything—it's about removing everything that doesn't serve a purpose. When we strip away the unnecessary, what remains becomes more powerful and intentional.
 
-## The Power of Whitespace
+I can’t remember the last time I was bored. Probably sophomore year of high school, before I had a phone.
 
-Whitespace, or negative space, is one of the most powerful tools in a designer's toolkit. It gives content room to breathe and helps guide the eye through a composition. In web design, generous whitespace can make the difference between a cluttered, overwhelming experience and one that feels calm and focused.
+When I was a kid, I remember being so frustrated by boredom. 
+Nowadays, its impossible to feel that way. There’s content one click or a keyboard stroke away.
 
-## Typography as a Foundation
+Even by accident,  You go on youtube to look up how to do something, and 5 minutes later your find yourself scrolling youtube shorts. 
 
-When you embrace minimalism, typography becomes even more important. With fewer visual elements competing for attention, your choice of typefaces, sizes, and spacing carries more weight. A well-chosen serif for headings paired with a clean sans-serif for body text can create all the visual interest you need.
+This really fucked me up in college. I had so much trouble sleeping. I would consume short form content any time I got a chance. By the time I got to bed, my mind became super active. All the thoughts and problems I neglected to deal with would just wash over me. I couldn’t sleep before 4 am. I was just not present. 
 
-## Color Restraint
+Deleting all short form content helped, but I never got back to boredom. My sleep got better, but my mind was no flood with worry all the time. 
 
-Minimal design often means a restrained color palette. An off-white background with dark text and perhaps one or two accent colors can be incredibly effective. This restraint forces you to be more intentional with color, using it only where it truly adds value.
+When I was with friends, I worried about not studying or working.
 
-## Conclusion
+When I was working, I worried about missing out on time with friends.
 
-Minimal design is about clarity, focus, and intention. It's a discipline that requires you to question every element and ensure it serves a purpose. When done well, the result is an experience that feels effortless and timeless.
+When I had a job, I worried about not learning fast enough.
+
+When I got home and was trying to relax, I worried I wasn’t building enough side projects.
+
+I used to think the answer to this was just passion. Once I found something I love to do, I wouldn’t have this constant worry. 
+
+I quit my job to build [Cobalt](http://try-cobalt.com/). I love what I’m doing, but it’s still hard to compartmentalize. Startup success isn’t guaranteed, and every minute I’m not working on Cobalt feels like a missed opportunity. I think I realized that this is probably something that just comes with age. After a certain age, you’re just always worried about something. 
+
+I do understand that not all worries are not equal. It’s a privilege to worry about something you care about. 
+
+But I do wish I could go back and feel boredom one more time. Back to when I didn’t expect anything from myself. When life just happened, and that was enough.
