--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -14,7 +14,7 @@ Even by accident,  You go on youtube to look up how to do something, and 5 minut
 
 This really fucked me up in college. I had so much trouble sleeping. I would consume short form content any time I got a chance. By the time I got to bed, my mind became super active. All the thoughts and problems I neglected to deal with would just wash over me. I couldn’t sleep before 4 am. I was just not present. 
 
-Deleting all short form content helped, but I never got back to boredom. My sleep got better, but my mind was no flood with worry all the time. 
+Deleting all short form content helped, but I never got back to boredom. My sleep got better, but my mind was now flood with worry all the time. 
 
 When I was with friends, I worried about not studying or working.
 
