--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -4,17 +4,16 @@ date: "2025-03-15"
 description: "Minimalism in design isn't about removing everything—it's about removing everything that doesn't serve a purpose."
 ---
 
-
 I can’t remember the last time I was bored. Probably sophomore year of high school, before I had a phone.
 
-When I was a kid, I remember being so frustrated by boredom. 
+When I was a kid, I remember being so frustrated by boredom.
 Nowadays, its impossible to feel that way. There’s content one click or a keyboard stroke away.
 
-Even by accident,  You go on youtube to look up how to do something, and 5 minutes later your find yourself scrolling youtube shorts. 
+Even by accident, You go on youtube to look up how to do something, and 5 minutes later your find yourself scrolling youtube shorts.
 
-This really fucked me up in college. I had so much trouble sleeping. I would consume short form content any time I got a chance. By the time I got to bed, my mind became super active. All the thoughts and problems I neglected to deal with would just wash over me. I couldn’t sleep before 4 am. I was just not present. 
+This really fucked me up in college. I had huge trouble sleeping. I would consume short form content all the time. By the time I got to bed, my mind became super active. All the thoughts and problems I neglected to deal with would just flood my brain. I couldn’t sleep before 4 am. I was just not present.
 
-Deleting all short form content helped, but I never got back to boredom. My sleep got better, but my mind was now flood with worry all the time. 
+Deleting all short form content helped, but I never got back to boredom. My sleep got better, but my mind was now flood with worry all the time.
 
 When I was with friends, I worried about not studying or working.
 
@@ -24,10 +23,10 @@ When I had a job, I worried about not learning fast enough.
 
 When I got home and was trying to relax, I worried I wasn’t building enough side projects.
 
-I used to think the answer to this was just passion. Once I found something I love to do, I wouldn’t have this constant worry. 
+I used to think the answer to this was just passion. Once I found something I love to do, I wouldn’t have this constant worry.
 
-I quit my job to build [Cobalt](http://try-cobalt.com/). I love what I’m doing, but it’s still hard to compartmentalize. Startup success isn’t guaranteed, and every minute I’m not working on Cobalt feels like a missed opportunity. I think I realized that this is probably something that just comes with age. After a certain age, you’re just always worried about something. 
+I quit my job to build [Cobalt](http://try-cobalt.com/). I love what I’m doing, but it’s still hard to compartmentalize. Startup success isn’t guaranteed, and every minute I’m not working on Cobalt feels like a missed opportunity. I think I realized that this is probably something that just comes with age. After a certain age, you’re just always worried about something.
 
-I do understand that not all worries are not equal. It’s a privilege to worry about something you care about. 
+Not all worries are equal. It’s a privilege to worry about something you care about.
 
 But I do wish I could go back and feel boredom one more time. Back to when I didn’t expect anything from myself. When life just happened, and that was enough.
