--- a/content/blog/art.mdx
+++ b/content/blog/art.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Art only resonates as you experience real life "
+title: "Art only resonates if you experience "
 date: "2025-12-07"
 description: ""
 draft: false
